2009-03-03  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/coherence_upnp/coherence_upnp.py: Mark some strings
	as translatable and ensure gettext is imported to the Coherence
	plugin.

============ Version 2.25.92

2009-03-03  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.25.92
	* Makefile.am: Some distcheck fixes

2009-03-03  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c (totem_embedded_open_uri):
	Fix repeat not working when we open a single file ourselves,
	patch from Kazuhiro Yamato <kyamato@miraclelinux.com>
	(Closes: #572942)

2009-02-24  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Add MXF videos (Closes: #572970)

2009-02-23  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/screenshot/totem-gallery.c (totem_gallery_new):
	* src/totem-video-thumbnailer.c (create_gallery): Added some
	translator comments.

2009-02-20  Philip Withnall  <philip@tecnocode.co.uk>

	* src/eggdesktopfile.c (egg_desktop_file_launchv): Patch from Martin
	<mnemo@minimum.se> to fix freeing uninitialised memory in libegg.
	(Closes: #572540)

2009-02-19  Robin Stocker  <robin@nibor.org>

	* src/totem-object.c: Fixed warnings about passing and comparison of
	incompatible pointer types

2009-02-17  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c (main): Set the PulseAudio application
	properties as per http://pulseaudio.org/wiki/ApplicationProperties

============ Version 2.25.91

2009-02-17  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: enable gtk-doc when building tarballs
	* NEWS: upd
	* configure.in: 2.25.91
	* docs/reference/Makefile.am: Fix distcheck

2009-02-17  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/screenshot/totem-gallery-progress.c
	(totem_gallery_progress_finalize), (totem_gallery_progress_new),
	(dialog_response_callback), (stdout_watch_cb),
	(totem_gallery_progress_run):
	* src/plugins/screenshot/totem-gallery.c
	(dialog_response_callback):