@@ -1,3 +1,9 @@
+2009-03-05  Philip Withnall  <philip@tecnocode.co.uk>
+
+	* src/plugins/opensubtitles/opensubtitles.py: Patch from Ignacio Casal
+	Quinteiro <nacho.resa@gmail.com> to fix language selection in the
+	OpenSubtitles plugin. (Closes: #572733)
+
 2009-03-03  Philip Withnall  <philip@tecnocode.co.uk>
 
 	* src/plugins/coherence_upnp/coherence_upnp.py: Mark some strings
